--- a/styles/body/lift/liftingCard.module.css
+++ b/styles/body/lift/liftingCard.module.css
@@ -6,17 +6,14 @@
     align-items: center;
 }
 .liftingHeader{
-    /* background-color: purple; */
     font-size: 45px;
     font-weight: 500;
     letter-spacing: -0.025em;
     width: 547px;
     height: 164px;
-    color: #EB4C29;
-    /* width: 40%; */
+    color: #000;
 }
 .liftingTitle{
-    /* background-color: yellow; */
     font-weight: normal;
     font-size: 16px;
     letter-spacing: 0.005em;
