changed the styles used

--- a/styles/body/campaign/campaign.module.css
+++ b/styles/body/campaign/campaign.module.css
@@ -1,1 +1,1 @@
-
+.campaignContainer{position:relative}.compaignImg{opacity:.8}.campaignText{color:#eb4c29;font-weight:bold;font-size:20px}.impactNumber{width:200px}.campVolu{position:absolute;bottom:12rem;left:5rem}.campVolu2{position:absolute;right:0px;top:10rem}@media only screen and (max-width: 780px){.campVolu{display:none}.campVolu2{display:none}}
