--- a/styles/body/lift/liftingCard.module.css
+++ b/styles/body/lift/liftingCard.module.css
@@ -1,25 +1,1 @@
-
-.liftingCard{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.liftingHeader{
-    font-size: 45px;
-    font-weight: 500;
-    letter-spacing: -0.025em;
-    width: 547px;
-    height: 164px;
-    color: #000;
-}
-.liftingTitle{
-    font-weight: normal;
-    font-size: 16px;
-    letter-spacing: 0.005em;
-    width: 480px;
-    height: 48px;
-}
-.liftingTitle::last-word {
-    display: none;
-}
+.liftingCard .liftingHeader{flex:1;font-size:45px;font-weight:500;letter-spacing:-0.025em;width:547px;height:164px;color:#000}.liftingCard .liftingHeader span{color:#eb4c29}.liftingTitle{font-weight:normal;font-size:16px;letter-spacing:.005em;width:480px;height:48px}@media only screen and (max-width: 1025px){.liftingCard{width:100%}.liftingCard .liftingHeader{font-size:30px;font-weight:500;width:300px;height:100px}.liftingCard .liftingTitle{font-weight:normal;font-size:10px}}@media only screen and (max-width: 768px){.liftingCard{width:100%}.liftingCard .liftingHeader{font-size:20px;font-weight:500;width:300px;height:100px}}
