--- a/styles/body/together/together.module.css
+++ b/styles/body/together/together.module.css
@@ -1,10 +1,1 @@
-
-.together{
-    background-image: url(../../../assets/img/Rectangle\ 33.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 1200px;
-    height: 334px;
-    background-color: #EB4C29;
-}
+.together{background-image:url("../../../assets/img/Rectangle33.png");background-position:center;background-repeat:no-repeat;background-size:cover;width:100%;height:334px;background-color:#eb4c29;margin-top:10px;border-radius:20px}
