--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,23 +1,23 @@
 @tailwind base;
 @tailwind components;
-
-@font-face {
-  font-family: 'Aeonik';
-  src: local('Aeonik'), url(../assets/fonts/Aeonik/Aeonik-Air.ttf) format('ttf');
-}
-
-
 @tailwind utilities;
 
-html{
+@font-face {
+  font-family: "Aeonik";
+  src: local("Aeonik"), url(../assets/fonts/Aeonik/Aeonik-Air.ttf) format("ttf");
+}
+
+html {
   scroll-behavior: smooth;
 }
-*{
+
+* {
   box-sizing: border-box;
   font-family: Aeonik;
   padding: 0px;
   margin: 0px;
 }
-a{
+
+a {
   text-decoration: none !important;
 }
