--- a/styles/_global.mixins.scss
+++ b/styles/_global.mixins.scss
@@ -1,3 +1,5 @@
+@use "./global.variables" as vars;
+
 @mixin transform($property) {
   -webkit-transform: $property;
   -moz-transform: $property;
@@ -26,4 +28,18 @@
   -moz-transform: $property $time cubic-bezier(0.2, 0, 0, 1) 0s;
   -ms-transform: $property $time cubic-bezier(0.2, 0, 0, 1) 0s;
   transition: $property $time cubic-bezier(0.2, 0, 0, 1) 0s;
+}
+
+@mixin primary-button {
+  background-color: vars.$primary;
+  color: vars.$white;
+  border-radius: 30px;
+  font-weight: 500;
+  @include transition(all);
+
+  &:hover,
+  &:active {
+    color: vars.$white;
+    background-color: vars.$primary-hover;
+  }
 }
