--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,10 +25,14 @@ main {
   margin-top: 73px;
 }
 
+section + section {
+  margin-top: 100px !important;
+}
+
 .page-container {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 0;
   padding-top: 1.5rem;
   padding-bottom: 3rem;
 }
