--- a/styles/_global.variables.scss
+++ b/styles/_global.variables.scss
@@ -2,6 +2,7 @@ $primary: #ea4d37;
 $primary-hover: #d02b16;
 $secondary: #2a2b2a;
 $white: #fff;
+$white-hover: rgba(255, 255, 255, 0.85);
 $black: #000;
 
 $border-radius: 15px;
