--- a/components/sections/hero.module.scss
+++ b/components/sections/hero.module.scss
@@ -6,8 +6,8 @@
   position: relative;
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  min-height: 300px;
   background: #eee;
+  aspect-ratio: 2.07 / 1;
 }
 
 .cardOne,
@@ -36,4 +36,30 @@
   align-items: center;
   padding: 2rem;
   margin-left: -3vw;
+}
+
+@media only screen and (max-width: 768px) {
+  .cardOne,
+  .cardTwo {
+    position: absolute;
+    width: 22.5vw;
+    max-width: 300px;
+  }
+
+  .cardTwo {
+    right: unset;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .cardOne,
+  .cardTwo {
+    position: absolute;
+    width: 30vw;
+    max-width: 300px;
+  }
+
+  .cardTwo {
+    right: unset;
+  }
 }
