--- a/components/shared/emphasizedTitle.module.scss
+++ b/components/shared/emphasizedTitle.module.scss
@@ -28,20 +28,9 @@
   }
 }
 
-@media only screen and (max-width: 1025px) {
-  .title {
-    font-size: 30px;
-    font-weight: 500;
-    width: 300px;
-    height: 100px;
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .title {
-    font-size: 20px;
+    font-size: vars.$header-1 !important;
     font-weight: 500;
-    width: 300px;
-    height: 100px;
   }
 }
