--- a/components/aboutpageComponents/testimonials.module.scss
+++ b/components/aboutpageComponents/testimonials.module.scss
@@ -6,7 +6,6 @@
     margin-top: -90px;
     z-index: 1;
 }
-/* */
 .aboutpagetestimonial {
     margin-top: 0;
     padding-top: 100px;
@@ -19,7 +18,7 @@
 }
 .sectiontitletagline {
     display: inline-flex;
-    color: #15c8a0;
+    color: #ea4d37;
     font-size: 18px;
     font-weight: 900;
     align-items: center;
@@ -97,7 +96,7 @@
 .testimonialonecarousel.owltheme .owlnav .owlnext:hover,
 .testimonialonecarousel.owltheme .owlnav .owlprev:hover {
     color: #ffffff;
-    background: #15c8a0;
+    background: #ea4d37;
 }
 
 .testimonialonecarousel.owltheme .owlnav .owlnext:focus,
@@ -140,7 +139,7 @@
     right: -22px;
     height: 42px;
     width: 42px;
-    background: #15c8a0;
+    background: #ea4d37;
     border-radius: 50%;
     color: #ffffff;
     display: flex;
@@ -167,7 +166,7 @@
 
 .testimonialoneclientname h3 {
     font-size: 20px;
-    color: #15c8a0;
+    color: #ea4d37;
     font-weight: 900;
     line-height: 20px;
 }
